<resources>
    <string name="app_name">FL TAREK</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone_numper">Phone Numper</string>
    <string name="add">Add</string>
    <string name="order_adress">Order Address:</string>
    <string name="order_delivery_price">Order delivery Price:</string>
    <string name="order_name">Order Name:</string>
    <string name="order_price">Order Price:</string>
    <string name="add_order">Add Order</string>
    <string name="order_number">Order Number:</string>
    <string name="edit_order">Edit Order</string>
    <string name="order_date">Date:</string>
    <string name="order_status">Status:</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="set_order_ok">Set Order Ok</string>
    <string name="delete_order">are you sure for deleting the order?</string>
    <string name="set_order_ok_Alart">Do You Went To Set Order Ok?</string>
    <string name="save_edit_order">Do You Went To Save Your Edit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="successfully_login">You are successfully Login in ^_^</string>
    <string name="login_failed">login failed -_-</string>
    <string name="exit_messege">"Are you sure you want to exit?</string>

</resources>
